--- a/index.html
+++ b/index.html
@@ -11,30 +11,38 @@
 <body>
 
 	<!-- Scroll Down Box -->
-	<div id="scrollDownBox" class="scroll_down--box container" role="region" aria-labelledby="scrollDownText"
-		tabindex="0">
-		<h2 id="scrollDownText" class="scroll_down--text">Scroll down</h2>
-	</div>
+	<section>
+		<div id="scrollDownBox" class="scroll_down--box container" role="region" aria-labelledby="scrollDownText"
+			tabindex="0">
+			<h2 id="scrollDownText" class="scroll_down--text">Scroll down</h2>
+		</div>
+	</section>
 
 	<!-- Scroll Slide Box -->
-	<div id="scrollSlideBox" class="scroll_slide--box container" role="region" aria-labelledby="scrollSlideText"
-		tabindex="0">
-		<div class="scroll_slide--box__left">
-			<h2 id="scrollSlideText" class="scroll_slide--text">Slide from left</h2>
-			<div id="scrollSlideLine" class="scroll_slide--line"></div>
-		</div>
+	<section>
+		<div id="scrollSlideBox" class="scroll_slide--box container" role="region" aria-labelledby="scrollSlideText"
+			tabindex="0">
+			<div class="scroll_slide--box__left">
+				<h2 id="scrollSlideText" class="scroll_slide--text">"Slide from left"</h2>
+				<div id="scrollSlideLine" class="scroll_slide--line"></div>
+			</div>
 
-		<div class="scroll_slide--box__right">
-			<img id="scrollSlideImage" class="scroll_slide--image" src="src/workspace.jpg"
-				alt="Image of the workspace that moves from the Slide side of the screen to the center" role="img"
-				aria-label="Image of the workspace that moves from the Slide side of the screen to the center">
+			<div class="scroll_slide--box__right">
+				<a target="_blank" href="src/workspace.jpg">
+					<img id="scrollSlideImage" class="scroll_slide--image" src="src/workspace.jpg"
+						alt="Image of the workspace that moves from the Slide side of the screen to the center" role="img"
+						aria-label="Image of the workspace that moves from the Slide side of the screen to the center">
+				</a>
+			</div>
 		</div>
-	</div>
+	</section>
 
 	<!-- Scroll Up Box -->
-	<div id="scrollUpBox" class="scroll_up--box container" role="region" aria-labelledby="scrollUpText" tabindex="0">
-		<h2 id="scrollUpText" class="scroll_up--text">Scroll up</h2>
-	</div>
+	<section>
+		<div id="scrollUpBox" class="scroll_up--box container" role="region" aria-labelledby="scrollUpText" tabindex="0">
+			<h2 id="scrollUpText" class="scroll_up--text">Scroll up</h2>
+		</div>
+	</section>
 
 	<script src="js/script.js"></script>
 </body>
