--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 	<!-- Scroll Down Box -->
-	<section class="scroll_down">
+	<section class="scroll_section">
 		<div id="scrollDownBox" class="scroll_down--box container" role="region" aria-labelledby="scrollDownText"
 			aria-label="Text moves to down" tabindex="0">
 			<h2 id="scrollDownText" class="scroll_down--text">Scroll down</h2>
@@ -19,7 +19,7 @@
 	</section>
 
 	<!-- Scroll Slide Box -->
-	<section class="scroll_slide">
+	<section class="scroll_section">
 		<div id="scrollSlideBox" class="scroll_slide--box container" role="region" aria-labelledby="scrollSlideText"
 			aria-label="Slide moves from side to center" tabindex="0">
 			<div class="scroll_slide--box__left">
@@ -36,7 +36,7 @@
 	</section>
 
 	<!-- Scroll Up Box -->
-	<section class="scroll_up">
+	<section class="scroll_section">
 		<div id="scrollUpBox" class="scroll_up--box container" role="region" aria-labelledby="scrollUpText"
 			aria-label="Text moves to up" tabindex="0">
 			<h2 id="scrollUpText" class="scroll_up--text">Scroll up</h2>
