--- a/index.html
+++ b/index.html
@@ -3,31 +3,32 @@
 
 <head>
 	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE-edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="styles/style.css">
-	<title>Interactive Scrolling Page</title>
+	<title>Interactive Scrolling Page. Animation on Scroll</title>
 </head>
 
 <body>
 
 	<!-- Scroll Down Box -->
-	<section class="scroll_section">
+	<section class="scroll-scale_section scroll_section">
 		<div id="scrollDownBox" class="scroll_down--box container" role="region" aria-labelledby="scrollDownText"
 			aria-label="Text moves to down" tabindex="0">
-			<h2 id="scrollDownText" class="scroll_down--text">Scroll down</h2>
+			<h2 id="scrollDownText" class="scroll_down--text animate">Scroll down</h2>
 		</div>
 	</section>
 
 	<!-- Scroll Slide Box -->
-	<section class="scroll_section">
+	<section class="scroll-move_section scroll_section">
 		<div id="scrollSlideBox" class="scroll_slide--box container" role="region" aria-labelledby="scrollSlideText"
 			aria-label="Slide moves from side to center" tabindex="0">
-			<div class="scroll_slide--box__left">
+			<div class="scroll_slide--box__left animate">
 				<h2 id="scrollSlideText" class="scroll_slide--text">"Slide from left"</h2>
-				<div id="scrollSlideLine" class="scroll_slide--line"></div>
+				<div id="scrollSlideLine" class="scroll_slide--line animate"></div>
 			</div>
 
-			<div class="scroll_slide--box__right" role="img" aria-labelledby="scrollSlideImage">
+			<div class="scroll_slide--box__right animate" role="img" aria-labelledby="scrollSlideImage">
 				<a target="_blank" href="src/workspace.jpg" aria-label="Link to view full-size image">
 					<img id="scrollSlideImage" class="scroll_slide--image" src="src/workspace.jpg" alt="Image of the workspace">
 				</a>
@@ -36,10 +37,10 @@
 	</section>
 
 	<!-- Scroll Up Box -->
-	<section class="scroll_section">
+	<section class="scroll-scale_section scroll_section">
 		<div id="scrollUpBox" class="scroll_up--box container" role="region" aria-labelledby="scrollUpText"
 			aria-label="Text moves to up" tabindex="0">
-			<h2 id="scrollUpText" class="scroll_up--text">Scroll up</h2>
+			<h2 id="scrollUpText" class="scroll_up--text animate">Scroll up</h2>
 		</div>
 	</section>
 
