--- a/index.html
+++ b/index.html
@@ -10,26 +10,24 @@
 
 <body>
 
-	<!-- Scroll Down Box -->
-	<section class="scale-down container" aria-labelledby="sectionScaleDown" aria-label="Text moves to down" tabindex="0">
-		<h2 id="sectionScaleDown" class="scale-down__text animate"><span>Scroll down</span></h2>
+	<!-- Scroll Scale Down Box -->
+	<section class="scale-down container" aria-labelledby="sectionScaleDown" aria-label="Text moves to down">
+		<h2 id="sectionScaleDown" class="scale-down__text"><span>Scroll down</span></h2>
 	</section>
 
-	<!-- Scroll Slide Box -->
-	<section class="move-to container" aria-labelledby="sectionMove" aria-label="Slide moves to center" tabindex="0">
-		<div id="sectionMove" class="move-to__left animate">
-			<h2 class="move-to__left__text animate"><span>"Slide from left"</span></h2>
-			<div class="move-to__left__line animate"></div>
+	<!-- Scroll Slide Move Box -->
+	<section class="move-from container" aria-labelledby="sectionMove" aria-label="Slide moves to center" tabindex="0">
+		<div id="sectionMove" class="move-from__left">
+			<h2 class="move-from__left__text"><span>"Slide from left"</span></h2>
+			<div class="move-from__left__line"></div>
 		</div>
-		<div class="move-to__right animate">
-			<a target="_blank" href="src/workspace.jpg" aria-label="Link to view full-size image">
-				<img src="src/workspace.jpg" alt="Image of the workspace" class="move-to__right__img animate"></a>
-		</div>
+		<div class="move-from__right">
+			<img src="src/workspace.jpg" alt="Image of the workspace" class="move-from__right__img"></a>
 	</section>
 
-	<!-- Scroll Up Box -->
+	<!-- Scroll Scale Up Box -->
 	<section class="scale-up container" aria-labelledby="sectionScaleUp" aria-label="Text moves to up" tabindex="0">
-		<h2 id="sectionScaleUp" class="scale-up__text animate"><span>Scroll up</span></h2>
+		<h2 id="sectionScaleUp" class="scale-up__text"><span>Scroll up</span></h2>
 	</section>
 
 	<script src="js/script.js"></script>
