--- a/index.html
+++ b/index.html
@@ -11,24 +11,24 @@
 <body>
 
 	<!-- Scroll Scale Down Box -->
-	<section class="scale-down container" aria-labelledby="sectionScaleDown" aria-label="Text moves to down">
+	<header class="scale-down container" aria-labelledby="sectionScaleDown" aria-label="Text scales down" tabindex="0">
 		<h2 id="sectionScaleDown" class="scale-down__text"><span>Scroll down</span></h2>
-	</section>
+	</header>
 
 	<!-- Scroll Slide Move Box -->
-	<section class="move-from container" aria-labelledby="sectionMove" aria-label="Slide moves to center" tabindex="0">
+	<main class="move-from container" aria-labelledby="sectionMove" aria-label="Slide moves to center" tabindex="0">
 		<div id="sectionMove" class="move-from__left">
 			<h2 class="move-from__left__text"><span>"Slide from left"</span></h2>
 			<div class="move-from__left__line"></div>
 		</div>
 		<div class="move-from__right">
 			<img src="src/workspace.jpg" alt="Image of the workspace" class="move-from__right__img"></a>
-	</section>
+	</main>
 
 	<!-- Scroll Scale Up Box -->
-	<section class="scale-up container" aria-labelledby="sectionScaleUp" aria-label="Text moves to up" tabindex="0">
+	<footer class="scale-up container" aria-labelledby="sectionScaleUp" aria-label="Text scales up" tabindex="0">
 		<h2 id="sectionScaleUp" class="scale-up__text"><span>Scroll up</span></h2>
-	</section>
+	</footer>
 
 	<script src="js/script.js"></script>
 </body>
