--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 			<div class="move-from__left__line"></div>
 		</div>
 		<div class="move-from__right">
-			<img src="src/workspace.jpg" alt="Image of the workspace" class="move-from__right__img"></a>
+			<img src="src/workspace.jpg" alt="Image of the workspace" class="move-from__right__img">
+		</div>
 	</main>
 
 	<!-- Scroll Scale Up Box -->
