--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 
 	<!-- Scroll Scale Down Box -->
 	<header class="scale-down container" aria-labelledby="sectionScaleDown" aria-label="Text scales down" tabindex="0">
-		<h2 id="sectionScaleDown" class="scale-down__text"><span>Scroll down</span></h2>
+		<h2 id="sectionScaleDown" class="scale-down__text">Scroll down</h2>
 	</header>
 
 	<!-- Scroll Slide Move Box -->
 	<main class="move-from container" aria-labelledby="sectionMove" aria-label="Slide moves to center" tabindex="0">
 		<div id="sectionMove" class="move-from__left">
-			<h2 class="move-from__left__text"><span>"Slide from left"</span></h2>
+			<h2 class="move-from__left__text">"Slide from left"</h2>
 			<div class="move-from__left__line"></div>
 		</div>
 		<div class="move-from__right">
@@ -28,7 +28,7 @@
 
 	<!-- Scroll Scale Up Box -->
 	<footer class="scale-up container" aria-labelledby="sectionScaleUp" aria-label="Text scales up" tabindex="0">
-		<h2 id="sectionScaleUp" class="scale-up__text"><span>Scroll up</span></h2>
+		<h2 id="sectionScaleUp" class="scale-up__text">Scroll up</h2>
 	</footer>
 
 	<script src="js/script.js"></script>
